<resources>
    <string name="app_name">Panic Alert</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="action_settings">Settings</string>
    <string name="splash_title">Panic Alert system for police parit raja. Presented by Muhammad Izzat Bin Mohamad Sasudin</string>
    <string name="register">Don\'t have account !!</string>
    <string name="title_activity_police">PoliceActivity</string>
    <string name="title_activity_show_location">Map</string>
    <string name="all_field_mandatory">All fields are mandatory !!</string>
    <string name="wait_a_min_dialog_message">Please wait a min ...</string>
    <string name="check_network">Please check your internet coonection ...</string>
    <string name="title_activity_normal_user">NormalUserActivity</string>
    <string name="login_check_credentials_error">Please check your credentials ...</string>
    <string name="other_error">Something went wrong !! Please try again.</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="registration_title">User Registration</string>
    <string name="emaiId_hint">Email Id</string>
    <string name="name_hint">Name</string>
    <string name="mobileNo_hint">Mobile No.</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="register_button">Register</string>
    <string name="address_hint">Address</string>
    <string name="ic_no_hint">Identity Card No</string>
    <string name="password_missmatch_error">Password and Confirm Password mismatching !!</string>
    <string name="registration_successful_message">Thanks for registering !!</string>
    <string name="server_error">Server error !! Please try again.</string>
    <string name="user_exists_error">Username already exists ...</string>
    <string name="panic_alert_on">Panic Alert is ON... \nPress 2 times Power Button within 2sec to send your Location to Police Station.</string>
    <string name="panic_alert_off">Panic Alert is OFF...</string>
    <string name="no_data_found">No Booking History Found !!</string>
    <string name="alert_lists">Alert Lists</string>
    <string name="title_activity_maps">Map</string>
</resources>
