<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutLogoLayout"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageViewUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/transparent"
                android:hint="@string/username_hint"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageViewKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/key" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/transparent"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue_button"
            android:onClick="login"
            android:padding="5dp"
            android:text="Login"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/TextViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:onClick="openingRegistration"
            android:text="@string/register"
            android:textColor="@color/text_color"
            android:textSize="18dp" />
    </LinearLayout>

</RelativeLayout>